--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'styles/foundation';
+@import 'styles/shared';
+@import 'styles/global';
+// @import 'styles/components';
